// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`useFocusTrap should create guards when focus-trap is enabled 1`] = `
<div
  data-testid="wrapper"
>
  <div
    data-testid="container"
  />
</div>
`;

exports[`useFocusTrap should create guards when focus-trap is enabled 2`] = `
<div
  data-testid="wrapper"
>
  <span
    aria-hidden="true"
    data-focus-trap-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="1"
  />
  <div
    data-testid="container"
  />
  <span
    aria-hidden="true"
    data-focus-trap-guard="true"
    style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
    tabindex="0"
  />
</div>
`;

exports[`useFocusTrap should create guards when focus-trap is enabled 3`] = `
<div
  data-testid="wrapper"
>
  <div
    data-testid="container"
  />
</div>
`;

exports[`useFocusTrap should update DOM when scope-ref was changed 1`] = `
<div
  data-testid="wrapper"
>
  <div
    data-testid="container"
  >
    <span
      aria-hidden="true"
      data-focus-trap-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-testid="container-1"
    />
    <span
      aria-hidden="true"
      data-focus-trap-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
    <div
      data-testid="container-2"
    />
  </div>
</div>
`;

exports[`useFocusTrap should update DOM when scope-ref was changed 2`] = `
<div
  data-testid="wrapper"
>
  <div
    data-testid="container"
  >
    <div
      data-testid="container-1"
    />
    <span
      aria-hidden="true"
      data-focus-trap-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="1"
    />
    <div
      data-testid="container-2"
    />
    <span
      aria-hidden="true"
      data-focus-trap-guard="true"
      style="width: 1px; height: 0px; padding: 0px; overflow: hidden; position: fixed; top: 1px; left: 1px;"
      tabindex="0"
    />
  </div>
</div>
`;

exports[`useFocusTrap should update DOM when scope-ref was changed 3`] = `
<div
  data-testid="wrapper"
>
  <div
    data-testid="container"
  >
    <div
      data-testid="container-1"
    />
    <div
      data-testid="container-2"
    />
  </div>
</div>
`;
